data/issues_raw/buildinstall/buildinstall_train_6897.txt
compile failed at grpc_remote_worker.cc error: no matching function

Hi, I am trying to build tensorflow from source. Configure is OK, but bazel build is failed.
Enviroment: Centos-6.5  gcc-4.8.0 bazel-0.42 tensorflow-0.12.1 cuda-8.0
Here is the error log:
ERROR: /root/Downloads/tensorflow/tensorflow/core/distributed_runtime/rpc/BUILD:70:1: C++ compilation of rule '//tensorflow/core/distributed_runtime/rpc:grpc_remote_worker' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 134 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/core/distributed_runtime/rpc/grpc_remote_worker.cc: In lambda function:
tensorflow/core/distributed_runtime/rpc/grpc_remote_worker.cc:215:68: error: no matching function for call to 'grpc::ClientContext::TryCancel() const'
call_opts->SetCancelCallback(this { context_.TryCancel(); });
^
tensorflow/core/distributed_runtime/rpc/grpc_remote_worker.cc:215:68: note: candidate is:
In file included from external/grpc/include/grpc++/impl/codegen/call.h:43:0,
from external/grpc/include/grpc++/impl/call.h:37,
from external/grpc/include/grpc++/channel.h:39,
from external/grpc/include/grpc++/grpc++.h:56,
from ./tensorflow/core/distributed_runtime/rpc/grpc_util.h:21,
from ./tensorflow/core/distributed_runtime/rpc/grpc_remote_worker.h:21,
from tensorflow/core/distributed_runtime/rpc/grpc_remote_worker.cc:16:
external/grpc/include/grpc++/impl/codegen/client_context.h:296:8: note: void grpc::ClientContext::TryCancel() 
void TryCancel();
^
external/grpc/include/grpc++/impl/codegen/client_context.h:296:8: note:   no known conversion for implicit 'this' parameter from 'const grpc::ClientContext*' to 'grpc::ClientContext*'
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 13.842s, Critical Path: 11.80s